Fixing table width when comment is too long

--- a/omod/src/main/compass/sass/allergies.scss
+++ b/omod/src/main/compass/sass/allergies.scss
@@ -11,3 +11,9 @@
 form {
 	display: inline;
 }
+
+td { 
+	max-width: 100px; 
+	text-overflow: ellipsis; 
+	overflow: hidden;
+}
